# rs-build-entity

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  models.rs
templates/: EntityOnAkkaHttp.scala.tpl  TemplateEntity.scala.tpl  TemplateRepository.scala.tpl
