[package]
name = "build-entity"
version = "0.1.2"
authors = ["letusfly85 <letusfly95@gmail.com>"]

[dependencies]
diesel = { version = "1.1.1", features = ["mysql"] }
diesel_codegen = { version = "0.16.0", features = ["mysql"] }
dotenv = "0.11.0"
tera = "0.11"
serde = "1.0.29"
serde_derive = "1.0.29"
Inflector = "*"
regex = "0.2"
