[package]
name = "build-entity"
version = "0.1.4"
authors = ["letusfly85 <letusfly95@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.1.1", features = ["mysql"] }
dotenv = { git = "https://github.com/apiraino/rust-dotenv" }
tera = "0.11.*"
serde = "1.0.84"
serde_derive = "1.0.84"
Inflector = "*"
regex = "0.2"
clap = "2"
